--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <link rel="icon" type="image/png" href="assets/favicon.png" />
 
     <!-- animation library -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -63,9 +60,7 @@
                       <div class="left"></div>
                       <div class="right">
                         <img class="image-top" src="assets/1.jpg" alt="" />
-                        <h1 class="animate__animated animate__fadeInDown">
-                          "SUSHMA SCHOOL"
-                        </h1>
+                        <h1 class="">"SUSHMA SCHOOL"</h1>
                         <h2>
                           Hands-on instruction &
                           <span>Community advancement</span>
@@ -83,9 +78,7 @@
                           ">
                           Learn More
                         </button>
-                        <div class="animate__animated animate__bounce">
-                          <img class="image-bottom" src="assets/2.jpg" alt="" />
-                        </div>
+                        <img class="image-bottom" src="assets/2.jpg" alt="" />
                       </div>
                     </div>
                   </div>
