--- a/index.html
+++ b/index.html
@@ -59,25 +59,22 @@
                     <div class="wrapper">
                       <div class="left"></div>
                       <div class="right">
+                        <img
+                          class="color-bars"
+                          src="assets/color-bars.webp"
+                          alt="color-bars" />
                         <img class="image-top" src="assets/1.jpg" alt="" />
-                        <h1 class="">"SUSHMA SCHOOL"</h1>
-                        <h2>
+                        <h1 class="title">"SUSHMA SCHOOL"</h1>
+                        <h2 class="title2">
                           Hands-on instruction &
                           <span>Community advancement</span>
                         </h2>
-                        <p>
+                        <p class="description">
                           We strive for success by fostering the essential
                           skills children need to thrive in academics and
                           athletics.
                         </p>
-                        <button
-                          style="
-                            font-size: 16px;
-                            font-family: 'Quicksand';
-                            font-weight: 600;
-                          ">
-                          Learn More
-                        </button>
+                        <button class="button1">Learn More</button>
                         <img class="image-bottom" src="assets/2.jpg" alt="" />
                       </div>
                     </div>
@@ -85,38 +82,55 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="second-slide-container">
+                    <img
+                      class="rocket-doodle"
+                      src="assets/rocket-doodle.png"
+                      alt="rocket-doodle" />
+                    <img
+                      class="arts-doodle"
+                      src="assets/arts-doodle.png"
+                      alt="arts-doodle" />
+                    <img
+                      class="creativity-doodle"
+                      src="assets/creativity-doodle.webp"
+                      alt="creativity-doodle" />
                     <div class="wrapper">
-                      <div>
+                      <div class="title-second">
                         <span>Empowering young students</span> To envision their
                         future.
                       </div>
-                      <p>
+                      <p class="description-second">
                         Nuturing courage, confidence, creativity, and compassion
                         in students so they can make meaningful contributions in
                         a diverse and ever-changing world.
                       </p>
-                      <button
-                        style="
-                          font-size: 16px;
-                          font-family: 'Quicksand';
-                          font-weight: 600;
-                        ">
-                        Enroll Now
-                      </button>
+                      <button class="button-second">Enroll Now</button>
                     </div>
                   </div>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide third-slide">
+                  <img
+                    class="yellow-blob"
+                    src="assets/yellow-shape.webp"
+                    alt="blob" />
+                  <img
+                    class="red-blob"
+                    src="assets/pink-shape.webp"
+                    alt="blob" />
+                  <img
+                    class="blue-blob"
+                    src="assets/purple-shape.webp"
+                    alt="blob" />
                   <div class="image-box">
                     <img src="assets/3.jpg" alt="" />
                   </div>
                   <div class="slide-three-left"></div>
                   <div class="slide-three-right">
                     <div style="display: flex; flex-direction: column">
-                      <h1>' Fun In School '</h1>
-                      <h2>Creative Learning</h2>
+                      <h1 class="title-third1">' Fun In School '</h1>
+                      <h2 class="title-third2">Creative Learning</h2>
                     </div>
-                    <ul>
+                    <ul class="list">
                       <li>Innovative cirriculum designs</li>
                       <li>
                         over 1,000 engaging worksheets and craft activities
@@ -126,6 +140,7 @@
                     </ul>
                     <div>
                       <button
+                        class="button-third"
                         style="
                           font-size: 16px;
                           font-family: 'Quicksand';
@@ -262,7 +277,16 @@
           <div class="curriculum-wrapper">
             <h1>Standard Curriculum</h1>
             <div class="curriculum-card-container">
-              <div class="curriculum-card" style="background-color: white">
+              <div
+                class="curriculum-card"
+                style="
+                  background-image: linear-gradient(
+                    #c6e9fc,
+                    #d5eaf5,
+                    #ffffff,
+                    #f1f1f1
+                  );
+                ">
                 <div class="curriculum-card-image">
                   <img src="assets/curriculum1.png" alt="Elementary School" />
                 </div>
@@ -281,12 +305,26 @@
                     journey of learning begins with delight.</span
                   >
                 </div>
-                <button style="font-family: 'Quicksand'; cursor: pointer">
+                <button
+                  style="
+                    font-family: 'Quicksand';
+                    cursor: pointer;
+                    color: #64c8ff;
+                  ">
                   Read More
                 </button>
               </div>
 
-              <div class="curriculum-card" style="background-color: white">
+              <div
+                class="curriculum-card"
+                style="
+                  background-image: linear-gradient(
+                    #fada8f,
+                    #faefd5,
+                    #f1ecdf,
+                    #ffffff
+                  );
+                ">
                 <div class="curriculum-card-image">
                   <img src="assets/curriculum2.png" alt="Elementary School" />
                 </div>
@@ -305,12 +343,26 @@
                     of knowledge. where dreams belong</span
                   >
                 </div>
-                <button style="font-family: 'Quicksand'; cursor: pointer">
+                <button
+                  style="
+                    font-family: 'Quicksand';
+                    cursor: pointer;
+                    color: #f0aa00;
+                  ">
                   Read More
                 </button>
               </div>
 
-              <div class="curriculum-card" style="background-color: white">
+              <div
+                class="curriculum-card"
+                style="
+                  background-image: linear-gradient(
+                    #dfc3f7,
+                    #e6d6f5,
+                    #f3eef8,
+                    rgb(255, 255, 255)
+                  );
+                ">
                 <div class="curriculum-card-image">
                   <img src="assets/curriculum3.png" alt="Elementary School" />
                 </div>
@@ -329,7 +381,12 @@
                     and destinies awaken to embrace futures.</span
                   >
                 </div>
-                <button style="font-family: 'Quicksand'; cursor: pointer">
+                <button
+                  style="
+                    font-family: 'Quicksand';
+                    cursor: pointer;
+                    color: #8700ff;
+                  ">
                   Read More
                 </button>
               </div>
@@ -378,6 +435,8 @@
       </div>
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/MotionPathPlugin.min.js"></script>
   </body>
   <script src="script.js"></script>
 </html>
